--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,13 +1,13 @@
-%h1 Listing items
+%h1= Item.model_name.human
 
-%table
+%table.table.table-striped.table-hover
   %tr
-    %th Name
-    %th Image
-    %th Price
-    %th Description
-    %th Display flag
-    %th Sort no
+    %th= Item.human_attribute_name(:name)
+    %th= Item.human_attribute_name(:image)
+    %th= Item.human_attribute_name(:price)
+    %th= Item.human_attribute_name(:description)
+    %th= Item.human_attribute_name(:display_flag)
+    %th= Item.human_attribute_name(:sort_no)
     %th
     %th
     %th
