--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,9 @@
-%p#notice= notice
-
+%div.show
+  %div.row
+    %div.col-sm-2
+      %b= User.human_attribute_name(:email)
+    %div.col-sm-10
+      = @user.email
 
 = link_to 'Edit', edit_user_path(@user)
 \|
