管理者領域を分けるように修正

--- a/app/views/admin/coupons/_form.html.haml
+++ b/app/views/admin/coupons/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @coupon, html: { class: 'form-horizontal' } do |f|
+= simple_form_for [:admin, @coupon], html: { class: 'form-horizontal' } do |f|
   - if notification = f.error_notification
     = notification
 
