--- a/app/views/admin/items/index.html.haml
+++ b/app/views/admin/items/index.html.haml
@@ -1,4 +1,4 @@
-%h1= Item.model_name.human
+- @page_title = t('helpers.titles.list', { model: Item.model_name.human })
 
 %table.table.table-striped.table-hover
   %tr
@@ -20,10 +20,10 @@
       %td= item.description
       %td= item.display_flag
       %td= item.sort_no
-      %td= link_to 'Show', item
-      %td= link_to 'Edit', edit_item_path(item)
-      %td= link_to 'Destroy', item, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %td= link_to 'Show', [:admin, item]
+      %td= link_to 'Edit', edit_admin_item_path(item)
+      %td= link_to 'Destroy', [:admin, item], :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
 
-= link_to 'New Item', new_item_path
+= link_to 'New Item', new_admin_item_path
