--- a/app/views/admin/items/_form.html.haml
+++ b/app/views/admin/items/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @item, html: { class: 'form-horizontal', multipart: true } do |f|
+= simple_form_for [:admin, @item], html: { class: 'form-horizontal', multipart: true } do |f|
   - if notification = f.error_notification
     = notification
 
