--- a/app/views/admin/items/show.html.haml
+++ b/app/views/admin/items/show.html.haml
@@ -1,3 +1,5 @@
+- @page_title = t('helpers.titles.show', { model: Item.model_name.human })
+
 %div.show
   %div.row
     %div.col-sm-2
@@ -25,6 +27,6 @@
     %div.col-sm-10
       = @item.display_flag
 
-= link_to 'Edit', edit_item_path(@item)
+= link_to 'Edit', edit_admin_item_path(@item)
 \|
-= link_to 'Back', items_path
+= link_to 'Back', admin_items_path
