--- a/app/views/admin/provide_users/_form.html.haml
+++ b/app/views/admin/provide_users/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @provide_user, html: { class: 'form-horizontal' } do |f|
+= simple_form_for [:admin, @provide_user], html: { class: 'form-horizontal' } do |f|
   - if notification = f.error_notification
     = notification
 
