業者アカウントが商品在庫を増減できるように修正

--- a/app/views/provide/items/show.html.haml
+++ b/app/views/provide/items/show.html.haml
@@ -32,6 +32,6 @@
     %div.col-sm-10
       = @item.stock
 
-= link_to 'Edit', edit_admin_item_path(@item)
+= link_to 'Edit', edit_provide_item_path(@item)
 \|
-= link_to 'Back', admin_items_path
+= link_to 'Back', provide_items_path
