--- a/app/views/provide/items/index.html.haml
+++ b/app/views/provide/items/index.html.haml
@@ -10,7 +10,6 @@
     %th= Item.human_attribute_name(:stock)
     %th
     %th
-    %th
 
   - @items.each do |item|
     %tr
@@ -20,10 +19,6 @@
       %td= item.description
       %td= item.display_flag
       %td= item.stock
-      %td= link_to 'Show', [:admin, item]
-      %td= link_to 'Edit', edit_admin_item_path(item)
-      %td= link_to 'Destroy', [:admin, item], :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %td= link_to 'Show', [:provide, item]
+      %td= link_to 'Edit', edit_provide_item_path(item)
 
-%br
-
-= link_to 'New Item', new_admin_item_path
