一覧にページング処理を追加

--- a/app/views/admin/coupons/index.html.haml
+++ b/app/views/admin/coupons/index.html.haml
@@ -1,5 +1,10 @@
 - @page_title = t('helpers.titles.list', { model: Coupon.model_name.human })
 
+%p
+  %span.pull-left= t('views.page_info.page', current: @coupons.current_page, total: @coupons.num_pages)
+  %span.pull-right= t('views.page_info.records', offset: @coupons.offset_value+1, limit: (@coupons.offset_value + @coupons.length), total: @coupons.total_count)
+  %span.clearfix
+
 %table.table.table-striped.table-hover
   %tr
     %th= Coupon.human_attribute_name(:code)
@@ -19,6 +24,8 @@
       %td= link_to 'Show', [:admin, coupon]
       %td= link_to 'Edit', edit_admin_coupon_path(coupon)
       %td= link_to 'Destroy', [:admin, coupon], :method => :delete, :data => { :confirm => 'Are you sure?' }
+
+= paginate @coupons
 
 %br
 
