--- a/app/views/admin/provide_users/index.html.haml
+++ b/app/views/admin/provide_users/index.html.haml
@@ -1,5 +1,10 @@
 - @page_title = t('helpers.titles.list', { model: ProvideUser.model_name.human })
 
+%p
+  %span.pull-left= t('views.page_info.page', current: @provide_users.current_page, total: @provide_users.num_pages)
+  %span.pull-right= t('views.page_info.records', offset: @provide_users.offset_value+1, limit: (@provide_users.offset_value + @provide_users.length), total: @provide_users.total_count)
+  %span.clearfix
+
 %table.table.table-striped.table-hover
   %tr
     %th= ProvideUser.human_attribute_name(:email)
@@ -15,6 +20,8 @@
       %td= link_to 'Show', [:admin, provide_user]
       %td= link_to 'Edit', edit_admin_provide_user_path(provide_user)
       %td= link_to 'Destroy', [:admin, provide_user], :method => :delete, :data => { :confirm => 'Are you sure?' }
+
+= paginate @provide_users
 
 %br
 
