--- a/app/views/admin/items/index.html.haml
+++ b/app/views/admin/items/index.html.haml
@@ -1,5 +1,10 @@
 - @page_title = t('helpers.titles.list', { model: Item.model_name.human })
 
+%p
+  %span.pull-left= t('views.page_info.page', current: @items.current_page, total: @items.num_pages)
+  %span.pull-right= t('views.page_info.records', offset: @items.offset_value+1, limit: (@items.offset_value + @items.length), total: @items.total_count)
+  %span.clearfix
+
 %table.table.table-striped.table-hover
   %tr
     %th= Item.human_attribute_name(:name)
@@ -23,6 +28,8 @@
       %td= link_to 'Show', [:admin, item]
       %td= link_to 'Edit', edit_admin_item_path(item)
       %td= link_to 'Destroy', [:admin, item], :method => :delete, :data => { :confirm => 'Are you sure?' }
+
+= paginate @items
 
 %br
 
