すべてのボタンを日本語化した。

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -76,3 +76,11 @@
         margin-bottom: 15px;
     }
 }
+
+table.table {
+    border-bottom: 1px solid #dddddd;
+
+    td.action-col, th.action-col {
+        width: 40px;
+    }
+}
