--- a/app/views/admin/coupons/index.html.haml
+++ b/app/views/admin/coupons/index.html.haml
@@ -11,9 +11,9 @@
     %th= Coupon.human_attribute_name(:point)
     %th= Coupon.human_attribute_name(:used)
     %th= Coupon.human_attribute_name(:used_datetime)
-    %th
-    %th
-    %th
+    %th.action-col
+    %th.action-col
+    %th.action-col
 
   - @coupons.each do |coupon|
     %tr
@@ -21,12 +21,21 @@
       %td= coupon.point
       %td= coupon.used
       %td= coupon.used_datetime
-      %td= link_to 'Show', [:admin, coupon]
-      %td= link_to 'Edit', edit_admin_coupon_path(coupon)
-      %td= link_to 'Destroy', [:admin, coupon], :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %td.action-col= link_to t('helpers.actions.show'), [:admin, coupon], class: 'btn btn-default btn-xs'
+      %td.action-col
+        = link_to edit_admin_coupon_path(coupon), class: 'btn btn-default btn-xs' do
+          %i.glyphicon.glyphicon-edit
+          = t('helpers.actions.edit')
+      %td.action-col
+        = link_to [:admin, coupon], method: :delete, data: { confirm: t('helpers.confirm.delete') }, class: 'btn btn-danger btn-xs btn-white' do
+          %i.glyphicon.glyphicon-trash
+          = t('helpers.actions.destroy')
 
 = paginate @coupons
 
 %br
 
-= link_to 'New Coupon', new_admin_coupon_path
+= link_to new_admin_coupon_path, class: 'btn btn-primary btn-white' do
+  %i.glyphicon.glyphicon-plus
+  = t('helpers.titles.new', { model: Coupon.model_name.human })
+
