--- a/app/views/admin/items/index.html.haml
+++ b/app/views/admin/items/index.html.haml
@@ -13,9 +13,9 @@
     %th= Item.human_attribute_name(:description)
     %th= Item.human_attribute_name(:display_flag)
     %th= Item.human_attribute_name(:stock)
-    %th
-    %th
-    %th
+    %th.action-col
+    %th.action-col
+    %th.action-col
 
   - @items.each do |item|
     %tr
@@ -25,12 +25,20 @@
       %td= item.description
       %td= item.display_flag
       %td= item.stock
-      %td= link_to 'Show', [:admin, item]
-      %td= link_to 'Edit', edit_admin_item_path(item)
-      %td= link_to 'Destroy', [:admin, item], :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %td.action-col= link_to t('helpers.actions.show'), [:admin, item], class: 'btn btn-default btn-xs'
+      %td.action-col
+        = link_to edit_admin_item_path(item), class: 'btn btn-default btn-xs' do
+          %i.glyphicon.glyphicon-edit
+          = t('helpers.actions.edit')
+      %td.action-col
+        = link_to [:admin, item], method: :delete, data: { confirm: t('helpers.confirm.delete') }, class: 'btn btn-danger btn-xs btn-white' do
+          %i.glyphicon.glyphicon-trash
+          = t('helpers.actions.destroy')
 
 = paginate @items
 
 %br
 
-= link_to 'New Item', new_admin_item_path
+= link_to new_admin_item_path, class: 'btn btn-primary btn-white' do
+  %i.glyphicon.glyphicon-plus
+  = t('helpers.titles.new', { model: Item.model_name.human })
