--- a/app/views/provide/items/index.html.haml
+++ b/app/views/provide/items/index.html.haml
@@ -13,8 +13,8 @@
     %th= Item.human_attribute_name(:description)
     %th= Item.human_attribute_name(:display_flag)
     %th= Item.human_attribute_name(:stock)
-    %th
-    %th
+    %th.action-col
+    %th.action-col
 
   - @items.each do |item|
     %tr
@@ -24,8 +24,11 @@
       %td= item.description
       %td= item.display_flag
       %td= item.stock
-      %td= link_to 'Show', [:provide, item]
-      %td= link_to 'Edit', edit_provide_item_path(item)
+      %td.action-col= link_to t('helpers.actions.show'), [:provide, item], class: 'btn btn-default btn-xs'
+      %td.action-col
+        = link_to edit_provide_item_path(item), class: 'btn btn-default btn-xs' do
+          %i.glyphicon.glyphicon-edit
+          = t('helpers.actions.edit')
 
 = paginate @items
 
