--- a/app/views/admin/items/index.html.haml
+++ b/app/views/admin/items/index.html.haml
@@ -10,7 +10,6 @@
     %th= Item.human_attribute_name(:name)
     %th= Item.human_attribute_name(:image)
     %th= Item.human_attribute_name(:price)
-    %th= Item.human_attribute_name(:description)
     %th= Item.human_attribute_name(:display_flag)
     %th= Item.human_attribute_name(:stock)
     %th.action-col
@@ -21,10 +20,9 @@
     %tr
       %td= item.name
       %td= item.image
-      %td= item.price
-      %td= item.description
-      %td= item.display_flag
-      %td= item.stock
+      %td= number_to_currency item.price
+      %td= boolean_to_human(item.display_flag)
+      %td= number_to_human(item.stock, units: 'number.human.stock_units.units' )
       %td.action-col= link_to t('helpers.actions.show'), [:admin, item], class: 'btn btn-default btn-xs'
       %td.action-col
         = link_to edit_admin_item_path(item), class: 'btn btn-default btn-xs' do
