商品系に更新時に楽観ロックするようにした。

--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -3,8 +3,8 @@
     = notification
 
   = f.input :email
-  = f.input :password
-  = f.input :password_confirmation
+  = f.input :password, disabled: disabled_password
+  = f.input :password_confirmation, disabled: disabled_password
 
   .form-actions
     = f.button :submit, class: 'btn-primary'
