--- a/app/views/admin/items/_form.html.haml
+++ b/app/views/admin/items/_form.html.haml
@@ -8,6 +8,7 @@
   = f.input :description
   = f.input :display_flag
   = f.input :sort_no
+  = f.hidden_field :lock_version
 
   .form-actions
     = f.button :submit, class: 'btn-primary'
