--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -1,4 +1,4 @@
 - @page_title = t('helpers.titles.edit', { model: User.model_name.human })
 
-= render 'form'
+= render 'form', { disabled_password: true }
 
