バージョンカラムを隠しフィールドに追加。

--- a/app/views/admin/coupons/_form.html.haml
+++ b/app/views/admin/coupons/_form.html.haml
@@ -4,6 +4,7 @@
 
   = f.input :code
   = f.input :point
+  = f.hidden_field :lock_version
 
   .form-actions
     = f.button :submit, class: 'btn-primary'
