--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -8,6 +8,7 @@
 %table.table.table-striped.table-hover
   %tr
     %th= User.human_attribute_name(:email)
+    %th= User.human_attribute_name(:nick_name)
     %th.action-col
     %th.action-col
     %th.action-col
@@ -15,6 +16,7 @@
   - @users.each do |user|
     %tr
       %td= user.email
+      %td= user.nick_name
       %td.action-col= link_to t('helpers.actions.show'), [:admin, user], class: 'btn btn-default btn-xs'
       %td.action-col
         = link_to edit_admin_user_path(user), class: 'btn btn-default btn-xs' do
