--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title #{t('site_title')}
+    %title #{t('site_titles.user')}
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
@@ -9,13 +9,23 @@
     %header#header.navbar.navbar-inverse.navbar-fixed-top
       .container-fluid
         .navbar-header
-          = link_to t('site_title'), root_path, class: 'navbar-brand'
+          = link_to t('site_titles.user'), root_path, class: 'navbar-brand'
         .navbar-collapse.collapse
           %ul.nav.navbar-nav.navbar-right
-            %li
-              = link_to t('top_nav.titles.contact'), 'mailto:'
+            - if admin_user_signed_in?
+              %li
+                = link_to t('site_titles.admin'), admin_root_path
+            - if provide_user_signed_in?
+              %li
+                = link_to t('site_titles.provide'), provide_root_path
+            - if user_signed_in?
+              %li
+                = link_to t('helpers.actions.logout'), destroy_user_session_path, method: :delete
+            - else
+              %li
+                = link_to t('helpers.actions.login'), new_user_session_path
     .cotainer-fluid
-      .row
+      .row.contents-wrapper
         #sideber.col-sm-3.col-md-2.sidebar
           %ul.nav.nav-sidebar
         #main.col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
