ユーザのプロフィール画像アップローダを追加。

--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -5,6 +5,7 @@
   = f.input :email
   = f.input :password, disabled: disabled_password
   = f.input :password_confirmation, disabled: disabled_password
+  = f.input :profile_image
   = f.input :nick_name
   = f.input :destination_name
   = f.input :destination_zip_code
