--- a/app/views/admin/items/show.html.haml
+++ b/app/views/admin/items/show.html.haml
@@ -10,7 +10,8 @@
     %div.col-sm-2
       %b= Item.human_attribute_name(:image)
     %div.col-sm-10
-      = @item.image
+      - if @item.image.present?
+        = image_tag @item.image_url
   %div.row
     %div.col-sm-2
       %b= Item.human_attribute_name(:price)
