--- a/app/views/devise/mailer/unlock_instructions.html.haml
+++ b/app/views/devise/mailer/unlock_instructions.html.haml
@@ -1,5 +1,3 @@
-%p
-  Hello #{@resource.email}!
-%p Your account has been locked due to an excessive number of unsuccessful sign in attempts.
-%p Click the link below to unlock your account:
-%p= link_to 'Unlock my account', unlock_url(@resource, :unlock_token => @token)
+%p= t('.hello', name: @resource.email)
+%p= t('.description')
+%p= link_to t('.unlock_link'), unlock_url(@resource, :unlock_token => @token)
