ユーザ系に楽観ロックを加えた。

--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -10,6 +10,7 @@
   = f.input :destination_name
   = f.input :destination_zip_code
   = f.input :destination_address
+  = f.hidden_field :lock_version
 
   .form-actions
     = f.button :submit, class: 'btn-primary'
