--- a/app/views/admin/provide_users/_form.html.haml
+++ b/app/views/admin/provide_users/_form.html.haml
@@ -6,6 +6,7 @@
   = f.input :password, disabled: disabled_password
   = f.input :password_confirmation, disabled: disabled_password
   = f.input :provider_name
+  = f.hidden_field :lock_version
 
   .form-actions
     = f.button :submit, class: 'btn-primary'
