更新時にパスワードが送信されなかった場合は無視するように修正。

--- a/app/views/admin/provide_users/_form.html.haml
+++ b/app/views/admin/provide_users/_form.html.haml
@@ -3,8 +3,8 @@
     = notification
 
   = f.input :email
-  = f.input :password, disabled: disabled_password
-  = f.input :password_confirmation, disabled: disabled_password
+  = f.input :password
+  = f.input :password_confirmation
   = f.input :provider_name
   = f.hidden_field :lock_version
 
