--- a/app/views/admin/users/new.html.haml
+++ b/app/views/admin/users/new.html.haml
@@ -1,4 +1,4 @@
 - @page_title = t('helpers.titles.new', { model: User.model_name.human })
 
-= render 'form', { disabled_password: false }
+= render 'form'
 
