--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -3,8 +3,8 @@
     = notification
 
   = f.input :email
-  = f.input :password, disabled: disabled_password
-  = f.input :password_confirmation, disabled: disabled_password
+  = f.input :password
+  = f.input :password_confirmation
   = f.input :profile_image
   = f.input :nick_name
   = f.input :destination_name
