画像が存在しない場合はプレースホルダ画像を表示するように修正。

--- a/app/views/admin/items/show.html.haml
+++ b/app/views/admin/items/show.html.haml
@@ -12,6 +12,8 @@
     %div.col-sm-10
       - if @item.image.present?
         = image_tag @item.image_url
+      - else
+        = image_tag 'http://placehold.it/100&text=NoImage'
   %div.row
     %div.col-sm-2
       %b= Item.human_attribute_name(:price)
