--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -12,6 +12,8 @@
     %div.col-sm-10
       - if @user.profile_image.present?
         = image_tag @user.profile_image
+      - else
+        = image_tag 'http://placehold.it/100&text=NoImage'
   %div.row
     %div.col-sm-2
       %b= User.human_attribute_name(:nick_name)
