--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,10 +1,11 @@
-%h2 Sign up
-= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :email, :required => true, :autofocus => true
-    = f.input :password, :required => true
-    = f.input :password_confirmation, :required => true
+- @page_title = t('.title')
+
+= simple_form_for resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' } do |f|
+  = f.input :email, :required => true, :autofocus => true
+  = f.input :password, :required => true
+  = f.input :password_confirmation, :required => true
+
   .form-actions
-    = f.button :submit, "Sign up"
+    = f.button :submit, t('.submit_button'), class: 'btn btn-primary'
+
 = render "devise/shared/links"
