--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,5 +1,12 @@
 - @page_title = t('helpers.titles.list', { model: User.model_name.human })
 
+%div
+  = link_to new_admin_user_path, class: 'btn btn-primary btn-white' do
+    %i.glyphicon.glyphicon-plus
+    = t('helpers.titles.new', { model: User.model_name.human })
+
+%br
+
 %p
   %span.pull-left= t('views.page_info.page', current: @users.current_page, total: @users.num_pages)
   %span.pull-right= t('views.page_info.records', offset: @users.offset_value+1, limit: (@users.offset_value + @users.length), total: @users.total_count)
@@ -41,8 +48,3 @@
 
 = paginate @users
 
-%br
-
-= link_to new_admin_user_path, class: 'btn btn-primary btn-white' do
-  %i.glyphicon.glyphicon-plus
-  = t('helpers.titles.new', { model: User.model_name.human })
