--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,11 +1,11 @@
-%h2 Change your password
-= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f|
+- @page_title = t('.title')
+
+= simple_form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put, class: 'form-horizontal col-sm-10' } do |f|
   = f.error_notification
-  = f.input :reset_password_token, :as => :hidden
+  = f.input :reset_password_token, as: :hidden
   = f.full_error :reset_password_token
-  .form-inputs
-    = f.input :password, :label => "New password", :required => true, :autofocus => true
-    = f.input :password_confirmation, :label => "Confirm your new password", :required => true
+  = f.input :password, required: true, autofocus: true
+  = f.input :password_confirmation, required: true
+
   .form-actions
-    = f.button :submit, "Change my password"
-= render "devise/shared/links"
+    = f.button :submit, t('.submit_button'), class: 'btn btn-lg btn-primary btn-block'
