--- a/app/views/admin/layouts/application.html.haml
+++ b/app/views/admin/layouts/application.html.haml
@@ -23,11 +23,12 @@
     .cotainer-fluid
       .row.contents-wrapper
         #sideber.col-sm-3.col-md-2.sidebar
-          %ul.nav.nav-sidebar
-            %li{ class: controller.controller_name == 'items' ? 'active' : ''} #{link_to(Item.model_name.human, admin_items_path)}
-            %li{ class: controller.controller_name == 'coupons' ? 'active' : ''} #{link_to(Coupon.model_name.human, admin_coupons_path)}
-            %li{ class: (controller.controller_name == 'users' or controller.controller_name == 'user_point_logs') ? 'active' : ''} #{link_to(User.model_name.human, admin_users_path)}
-            %li{ class: controller.controller_name == 'provide_users' ? 'active' : ''} #{link_to(ProvideUser.model_name.human, admin_provide_users_path)}
+          - if admin_user_signed_in?
+            %ul.nav.nav-sidebar
+              %li{ class: controller.controller_name == 'items' ? 'active' : ''} #{link_to(Item.model_name.human, admin_items_path)}
+              %li{ class: controller.controller_name == 'coupons' ? 'active' : ''} #{link_to(Coupon.model_name.human, admin_coupons_path)}
+              %li{ class: (controller.controller_name == 'users' or controller.controller_name == 'user_point_logs') ? 'active' : ''} #{link_to(User.model_name.human, admin_users_path)}
+              %li{ class: controller.controller_name == 'provide_users' ? 'active' : ''} #{link_to(ProvideUser.model_name.human, admin_provide_users_path)}
         #main.col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           - if notice or alert
             .notify-block
