--- a/app/views/provide/layouts/application.html.haml
+++ b/app/views/provide/layouts/application.html.haml
@@ -23,8 +23,9 @@
     .cotainer-fluid
       .row.contents-wrapper
         #sideber.col-sm-3.col-md-2.sidebar
-          %ul.nav.nav-sidebar
-            %li{ class: controller.controller_name == 'items' ? 'active' : ''} #{link_to(Item.model_name.human, provide_items_path)}
+          - if provide_user_signed_in?
+            %ul.nav.nav-sidebar
+              %li{ class: controller.controller_name == 'items' ? 'active' : ''} #{link_to(Item.model_name.human, provide_items_path)}
         #main.col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           - if notice or alert
             .notify-block
